# devops_task

./: .dockerignore  Dockerfile  Jenkinsfile  Makefile  app.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
Q2/: sysD.xml
k8s/flask-app/: values.yaml
k8s/flask-app/templates/: configmap.yaml  deployments.yaml  ingress.yaml  kustomization.yaml  services.yaml
k8s/flask-app/templates/tests/: test-connection.yaml
k8s/jenkins/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml  serviceAccount.yaml  volume.yaml
k8s/jenkins/base/: kustomization.yaml
k8s/jenkins/overlays/dev/: kustomization.yaml  serviceAccount.yaml  volume.yaml
