[project]
requires-python = ">=3.11"
name = "app"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Eslam Adel", email = "eslam.adel.me@gmail.com"},
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.flake8]
ignore = [
    'E111',
    'E114',
    'E115',
    'E116',
    'E117',
    'E121',
    'E122',
    'E123',
    'E124',
    'E125',
    'E126',
    'E127',
    'E128',
    'E129',
    'E131',
    'E201',
    'E202',
    'E203',
    'E211',
    'E221',
    'E222',
    'E225',
    'E226',
    'E228',
    'E231',
    'E241',
    'E251',
    'E252',
    'E261',
    'E262',
    'E265',
    'E266',
    'E271',
    'E272',
    'E275',
    'E301',
    'E302',
    'E303',
    'E304',
    'E305',
    'E401',
    'E402',
    'E501',
    'E502',
    'E701',
    'E703',
    'E704',
    'E711',
    'E712',
    'E741',
    'F401',
    'F541',
    'F722',
    'F811',
    'F821',
    'F841',
    'W291',
    'W292',
    'W293',
    'W391',
    'W503',
    'W504',
    'W605',
]